--- a/My03_Calc/src/index.html
+++ b/My03_Calc/src/index.html
@@ -3,11 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>My03Calc</title>
-  <base href="/">
+  <base href="/calc">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <h1>Index</h1>
   <app-root></app-root>
   <!-- <app-calc1></app-calc1> -->
   <!-- <app-calc2></app-calc2> -->
